--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 <body>
   <h1>🌐 Página web en construcción</h1>
-  <p>por <strong>LaPartyMaker</strong></p>
+  <p>por <strong>LaPartyMaker - Osjen Pajuita</strong></p>
 </body>
 </html>
+  <!--  -->
